--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
     <div class="row align-items-center g-2">
       <div class="col-md-6">
         <h1 class="h3 m-0"><i class="fas fa-heartbeat me-2"></i> Sistem PEKA B40</h1>
-        <div class="small opacity-75">Sistem pengurusan pesakit untuk program saringan kesihatan B40</div>
+        <div class="small opacity-75">Sistem pengurusan pesakit untuk program saringan kesihatan PEKA B40</div>
       </div>
       <div class="col-md-6 text-md-end">
         <span class="badge bg-light text-dark fs-6 p-2"><i class="fas fa-calendar-day me-1"></i> <span id="current-date"></span></span>
@@ -366,7 +366,7 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
    KONFIGURASI
 ======================= */
 const CONFIG = {
-  SCRIPT_URL: 'PASTE_YOUR_WEB_APP_URL_HERE'
+  SCRIPT_URL: 'https://script.google.com/macros/s/AKfycbx6TKE0vDDPO3-36cY7xjacAbGL0HIRKCrORNm-sED9y5NpIeIUk9gyrpiWy-S7vbc/exec'
 };
 
 /* =======================
