--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
     <div class="row align-items-center g-2">
       <div class="col-md-6">
         <h1 class="h4 m-0"><i class="fas fa-heartbeat me-2"></i> Sistem PEKA B40</h1>
-        <div class="small opacity-75">Sistem pengurusan pesakit untuk program saringan kesihatan B40</div>
+        <div class="small opacity-75">Sistem pengurusan pesakit untuk program saringan kesihatan PEKA B40</div>
       </div>
       <div class="col-md-6 text-md-end">
         <span class="badge bg-light text-dark fs-6 p-2"><i class="fas fa-calendar-day me-1"></i> <span id="current-date"></span></span>
@@ -133,7 +133,7 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
     <div class="d-flex justify-content-between align-items-center mb-3">
       <h2 class="h5 m-0"><i class="fas fa-tachometer-alt me-2"></i>Dashboard</h2>
       <div class="d-flex gap-2">
-        <button class="btn btn-sm btn-outline-success" id="btnExportCSV"><i class="fa-solid fa-file-csv me-1"></i>Export Selesai (CSV)</button>
+        <button class="btn btn-sm btn-outline-success" id="btnExportCSV"><i class="fa-solid fa-file-csv me-1"></i>Export (CSV)</button>
       </div>
     </div>
 
@@ -433,7 +433,7 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
 ======================= */
 const CONFIG = {
   SCRIPT_URL: 'https://script.google.com/macros/s/AKfycbx6TKE0vDDPO3-36cY7xjacAbGL0HIRKCrORNm-sED9y5NpIeIUk9gyrpiWy-S7vbc/exec',
-  LOGO_URL: 'https://via.placeholder.com/64x64.png?text=KS' // <-- Tukar kepada URL logo klinik anda
+  LOGO_URL: 'https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.facebook.com%2FklinikSihatSokmo%2Fposts%2F1040401774759531%2F&psig=AOvVaw3p_m05ThOAEay4vd2-HSTd&ust=1754908647430000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCODSurSGgI8DFQAAAAAdAAAAABAE' // <-- Tukar kepada URL logo klinik anda
 };
 
 /* =======================
