--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
     <div class="d-flex justify-content-between align-items-center mb-3">
       <h2 class="h5 m-0"><i class="fas fa-tachometer-alt me-2"></i>Dashboard</h2>
       <div class="d-flex gap-2">
-        <button class="btn btn-sm btn-outline-success" id="btnExportCSV"><i class="fa-solid fa-file-csv me-1"></i>Export (CSV)</button>
+        <button class="btn btn-sm btn-outline-success" id="btnExportCSV"><i class="fa-solid fa-file-csv me-1"></i>Export kepada (CSV)</button>
       </div>
     </div>
 
@@ -433,7 +433,7 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
 ======================= */
 const CONFIG = {
   SCRIPT_URL: 'https://script.google.com/macros/s/AKfycbx6TKE0vDDPO3-36cY7xjacAbGL0HIRKCrORNm-sED9y5NpIeIUk9gyrpiWy-S7vbc/exec',
-  LOGO_URL: 'https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.facebook.com%2FklinikSihatSokmo%2Fposts%2F1040401774759531%2F&psig=AOvVaw3p_m05ThOAEay4vd2-HSTd&ust=1754908647430000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCODSurSGgI8DFQAAAAAdAAAAABAE' // <-- Tukar kepada URL logo klinik anda
+  LOGO_URL: 'https://github.com/sihat9/mari-jalan-dengan-doktor/blob/main/img/logo-kss.png?raw=true'
 };
 
 /* =======================
@@ -526,9 +526,18 @@ let retcaModal, secondTcaModal, pdpaModal;
    INIT
 ======================= */
 document.addEventListener('DOMContentLoaded', () => {
-  // logo
+  // logo (dengan fallback kecil)
   const logoEl = document.getElementById('brandLogo');
   logoEl.src = CONFIG.LOGO_URL;
+  logoEl.onerror = () => {
+    const u = new URL(CONFIG.LOGO_URL);
+    u.searchParams.set('v', Date.now());
+    const retry = u.toString();
+    const img = new Image();
+    img.onload = () => (logoEl.src = retry);
+    img.onerror = () => (logoEl.src = 'https://via.placeholder.com/64x64.png?text=KS');
+    img.src = retry;
+  };
 
   // tarikh
   const opt = { weekday:'long', year:'numeric', month:'long', day:'numeric' };
@@ -996,7 +1005,6 @@ async function submitSecondTca(){
   const time = document.getElementById('secondTcaTime').value;
   if (!date || !time) { showToast('Ralat','Sila isi tarikh & masa TCA','danger'); return; }
   try{
-    // Server akan error jika PDPA belum ada
     const a = await postForm({ action:'updatePatient', id, tarikhTCA:date, masaTCA:time, staff:'SYSTEM' }, { msg:'Menetapkan TCA Second Visit…' });
     if (a.status!=='success') throw new Error(a.message||'Gagal tetapkan TCA');
     const b = await postForm({ action:'updateLabStatus', id, status:'DONE', staff:'SYSTEM' }, { msg:'Mengemas kini status follow-up…' });
