--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
    KONFIG (EDIT INI SAHAJA)
 ======================= */
 // 1) Isi URL Web App Apps Script (deployment terkini)
-const SCRIPT_URL = 'PASTE_WEB_APP_URL_HERE'; // contoh: https://script.google.com/macros/s/AKfycbx.../exec
+const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbx6TKE0vDDPO3-36cY7xjacAbGL0HIRKCrORNm-sED9y5NpIeIUk9gyrpiWy-S7vbc/exec'; // contoh: https://script.google.com/macros/s/AKfycbx.../exec
 // 2) Google OAuth Client ID (boleh public – guna Google Cloud Console)
 const GOOGLE_CLIENT_ID = 'PASTE_GOOGLE_CLIENT_ID.apps.googleusercontent.com';
 // 3) Logo (optional)
